# terminal-menu

./: CHANGELOG.md  README.md  build_package.sh  menu.py  pyproject.toml  terminal_menu.py  test.py  test2.py
examples/: basic_menu.py  nested_menus.py
